# personal_health

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 20220626_oura_explore_api.ipynb  20221009-review.ipynb  20221023_workout_classifier.ipynb  README.md
src/: app.py
