[tool.poetry]
name = "personal_health"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "APACHE LICENSE, VERSION 2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
black = "^22.3.0"
ipywidgets = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
