[tool.poetry]
name = "personal_health"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "APACHE LICENSE, VERSION 2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
python-dotenv = "^0.20.0"
pandas = "^1.4.3"
bokeh = "^2.4.3"
panel = "^0.13.1"
jupyter-bokeh = "^3.0.4"
qself = "^0.0.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
black = {extras = ["jupyter"], version = "^22.6.0"}
ipywidgets = "^7.7.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
